# omniverse-kit-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ISAAC-PICK-PLACE-RESUME.md  LICENSE  README.md  SECURITY.md  STOP_LINE.md  kit-run-command.md  live_e2e_prompt.md  pyproject.toml  st-update-catalog.md  st-update.md  temp-cleanup-review.md  temp-user-claude.md  test-go-FINAL-REPORT.md  tools.md
docs/: AGENTS.md  CLAUDE.md  constraint-validation-2026-04-23.md  implementation_issues.md  isaac-sim-6.0.0-upgrade-sot.md  mcp-usage-guide.md  oss-application-notes.md  phase-progress.md  tool-catalog.md  tool-diagnostic-map.md  tools-roadmap.md
kkr-extensions/: CLAUDE.md
office_mcp/: GOAL.md  README.md  SPEC.md
output_temp/: test_log.md
scenarios/: CLAUDE.md
scripts/: CLAUDE.md  bootstrap_codex_worktree.ps1  capture_pytest_report.py  compare_pointer_maps.py  compare_test_reports.py  diff_asset_inventory.py  diff_catalog.py  enrich_batch1_01_10.py  enrich_batch1_31_50.py  extract_pointer_map.py  generate_tool_catalog.py  harvest_extension_metadata.py  install_pre_commit_hook.py  kill_kit_zombie.sh  live_test_character_crowd.py  live_test_content.py  live_test_extension_ext.py  live_test_extension_ui.py  live_test_gui_equiv.py  live_test_lighting.py  live_test_material.py  live_test_navmesh_viz.py  live_test_omnigraph.py  live_test_phase_e.py  live_test_physics.py  live_test_replicator.py  live_test_robot_ext.py  live_test_sensor.py  live_test_sensor_contact_imu.py  live_test_timeline.py  live_test_viewport_multi.py  live_test_viewport_render.py  probe_mcp_surface.py  rebuild_scene.py  render_catalog_md.py  review_public_hygiene.py  run_process_module_standalone.py  run_restructure_tests.sh  run_scenario_standalone.py  sync_official_asset_catalog.py  (+7 more)
setup/: CLAUDE.md  setup-isaacsim-mcp.bat  setup_isaacsim_mcp.ps1  (+2 more)
(+682 files in other folders)
