[project]
name = "omniverse-kit-mcp"
version = "0.1.0"
description = "Isaac Sim 5.1 Custom Extension Validation MCP Server"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.21.0",
    "scikit-image>=0.22.0",
]

[project.scripts]
omniverse-kit-mcp = "omniverse_kit_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniverse_kit_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
    "usd-core>=24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: reads external Kit / USD Composer install trees (catalog diff smoke)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
